# tg-bot-and-client

./: .gitignore  Cargo.toml  docker-compose.yaml
migrations/: 20211110195714_initial.sql
src/: app.rs  db.rs  main.rs  models.rs  settings.rs
src/telegram/: bot.rs  mod.rs  parsers.rs  service.rs  user.rs
