[package]
name = "tgfeed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="1", features=["full"]}
time = "0.3.5"
async-trait = "*"
anyhow = "*"
futures = "*"
rss = {version = "*", features=["builders", "serde"]}
log = "0.4"
env_logger = "0.8.3"
config = "*"
serde = {version = "1", features = ["derive"]}
strum = { version = "0.24", features = ["derive"] }

[dependencies.rust-tdlib]
path = "/home/sergey/Projects/rust-tdlib"

[dependencies.sqlx]
version = "0.6.3"
features = ["postgres", "runtime-tokio-rustls", "macros"]
